# Set

./: CMakeLists.txt  README.md
res/matlab/: GetAngle2.m  Normalize.m  RotateVector.m  RotateVectorOptimized.m  SolveAngleConstraint.m  SolveDistanceConstraint.m  SolveOrthoConstraint.m  draw.m  perp.m  perp2.m  temp.m  test.m
run/: cleanUnix.sh  unixConfigureAndBuild.sh
src/exec/: Set.cpp
src/io/: AxisRenderer.cpp  AxisRenderer.hpp  SetCallback.cpp  SetCallback.hpp  SetIOHandler.cpp  SetIOHandler.hpp
src/relations/: Geometry.hpp  Relation.hpp  RelationDispatcher.hpp
src/scene/: Environment.cpp  Environment.hpp  Scene.cpp  Scene.hpp
src/scene/cuda/: CudaScene.cpp  CudaScene.cu  CudaScene.cuh  CudaScene.hpp
src/set/: Geometry.cpp  Geometry.hpp  Relation.hpp  Scene.cpp  Scene.hpp
src/set/io/: SetCallback.hpp  SetIOHandler.cpp  SetIOHandler.hpp
src/testing/: RelationUnitTests.cpp  TestingUtils.cpp  TestingUtils.hpp
src/world/: Environment.cpp  Environment.hpp  Scene.cpp  Scene.hpp  SceneInterface.hpp  SetWorld.cpp  SetWorld.hpp
